# Romania-Sumobot

./: .gitignore  README.md
interfearence-description/: CMakeLists.txt  logfile.txt  package.xml
interfearence-description/meshes/CAD/: base_link.stl  front_left_line_sensor.stl  front_right_line_sensor.stl  front_scoop.stl  hokuyo.stl  left_wheel.stl  rear_left_line_sensor.stl  rear_right_line_sensor.stl  right_wheel.stl
interfearence-description/urdf/: cad_interfearence.urdf.xacro  diff_interfearence.urdf  hardware_interfearence.urdf.xacro  interfearence.urdf
interfearence-gazebo/: CMakeLists.txt  package.xml
interfearence-gazebo/launch/: diff_empty_sim.launch  diff_v_diff.launch  empty_sim.launch  one_v_one.launch  rviz.launch  spawn_robot.launch
interfearence-gazebo/nodes/: tester.py
interfearence-gazebo/plugins/: arena_edge_detection_plugin.cpp  arena_edge_detection_plugin.hpp  colour_sensor.hpp  colour_sensor_plugin.cpp  colour_sensor_plugin.hpp  magnet_plugin.cpp
interfearence-gazebo/scripts/: tune_pid.py
interfearence-gazebo/worlds/: sumo_ring.world
interfearence-hardware/: CMakeLists.txt  package.xml
interfearence-hardware/config/: hardware.yaml  interfearence_control.yaml  joint_limits.yaml
interfearence-hardware/include/hardware/: interfearence.hpp
interfearence-hardware/scripts/: velocity_control.py
interfearence-hardware/src/: hardware_controller.cpp
interfearence-hardware/src/hardware/: interfearence.cpp
interfearence-launch/: CMakeLists.txt  package.xml
interfearence-launch/launch/: controllers.launch  diff_controller.launch  hardware.launch  interfearence.launch  rviz.launch  secret_weapon.launch
interfearence-launch/rviz_prefs/: hardware_rviz.rviz  sim_rviz.rviz
interfearence-localisation/: CMakeLists.txt  package.xml
interfearence-localisation/src/: odometry.cpp
interfearence-master/: CMakeLists.txt  package.xml
interfearence-master/scripts/: rush_enemy.py
interfearence-secret-weapon/: CMakeLists.txt  package.xml
interfearence-secret-weapon/include/dbscan/: dbscan.hpp
interfearence-secret-weapon/include/lidar_processor/: robot_finder.hpp
interfearence-secret-weapon/src/: lidar_processor.cpp
interfearence-secret-weapon/src/dbscan/: dbscan.cpp
interfearence-secret-weapon/src/lidar_processor/: robot_finder.cpp
interfearence_controllers/interfearence_controllers_generic_controller/: CMakeLists.txt  package.xml  setup.py
interfearence_controllers/interfearence_controllers_generic_controller/include/interfearence_controllers_generic_controller/: generic_controller.hpp
interfearence_controllers/interfearence_controllers_generic_controller/src/interfearence_controllers_generic_controller/: basic_controller.py  generic_controller.cpp  generic_controller.py
interfearence_controllers/interfearence_controllers_random/: CMakeLists.txt  package.xml
interfearence_controllers/interfearence_controllers_random/nodes/: random.py  random_controller.py  side_push.py
interfearence_controllers/interfearence_controllers_reverse_and_swing/: CMakeLists.txt  package.xml
interfearence_controllers/interfearence_controllers_reverse_and_swing/nodes/: reverse_and_swing.py
interfearence_controllers/interfearence_controllers_rush_enemy/: CMakeLists.txt  package.xml
interfearence_controllers/interfearence_controllers_rush_enemy/nodes/: rush_enemy.py
interfearence_controllers/interfearence_controllers_side_push/: CMakeLists.txt  package.xml
interfearence_controllers/interfearence_controllers_train_rush_controller/: CMakeLists.txt  checkpoint  package.xml
interfearence_controllers/interfearence_controllers_train_rush_controller/nodes/: rush_controller.py
interfearence_controllers/interfearence_controllers_train_rush_controller/results/: checkpoint  rush_controller-971642.data-00000-of-00001
interfearence_controllers/interfearence_controllers_train_rush_controller/results/test_bot_1/: checkpoint  rush-971642.index  rush-971681.data-00000-of-00001  rush-971681.index  rush-971717.data-00000-of-00001  rush-971717.index  rush-971882.data-00000-of-00001  rush-971882.index  rush-972110.data-00000-of-00001  rush-972110.index  rush-972323.data-00000-of-00001  rush-972323.index  rush-972355.data-00000-of-00001  rush-972355.index  rush-972570.data-00000-of-00001  rush-972570.index  rush-973269.data-00000-of-00001  rush-973269.index
interfearence_hardware/: CMakeLists.txt  package.xml  setup.py
interfearence_hardware/config/: interfearence_control.yaml  joint_limits.yaml
interfearence_hardware/include/interfearence_hardware/: interfearence.hpp
interfearence_hardware/nodes/: test_odrive_interface.py  velocity_control.py
interfearence_hardware/src/: hardware_controller.cpp
interfearence_hardware/src/interfearence_hardware/: interfearence.cpp  odrive_interface.py
interfearence_msgs/: CMakeLists.txt  package.xml
interfearence_msgs/msg/: EdgeDetection.msg
interfearence_openai/: CMakeLists.txt  package.xml  setup.py
interfearence_openai/config/: qlearn_params.yaml
interfearence_openai/launch/: start_training.launch
interfearence_openai/nodes/: start_training.py
interfearence_openai/src/interfearence_openai/robot_envs/: interfearence_env.py
interfearence_openai/src/interfearence_openai/task_envs/: interfearence_push_enemy.py
interfearence_openai/training_results/: openaigym.episode_batch.0.5917.stats.json  openaigym.manifest.0.5917.manifest.json
openai_ros/openai_ros/src/openai_ros/task_envs/: task_envs_list.py
