<?xml version="1.0"?>
<package format="2">
  <name>interfearence-description</name>
  <version>0.0.0</version>
  <description>The interfearence-description package</description>

  <maintainer email="nickick@todo.todo">nickick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
