<?xml version="1.0"?>
<package format="2">
  <name>interfearence-gazebo</name>
  <version>0.0.0</version>
  <description>The interfearence-gazebo package</description>

  <maintainer email="nickick@todo.todo">nickick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>interfearence-launch</depend>
</package>
