<?xml version="1.0"?>
<package format="2">
  <name>interfearence-gazebo</name>
  <version>0.0.0</version>
  <description>The interfearence-gazebo package</description>

  <maintainer email="nickick@todo.todo">nickick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>interfearence-launch</depend>
  <depend>interfearence_msgs</depend>
  <depend>roscpp</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
