<?xml version="1.0"?>
<package format="2">
  <name>interfearence-launch</name>
  <version>0.0.0</version>
  <description>The interfearence-launch package</description>

  <maintainer email="nickick@todo.todo">nickick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>interfearence-description</depend>
  <depend>interfearence-master</depend>
  <depend>interfearence-secret-weapon</depend>
  <depend>interfearence-hardware</depend>
  <depend>interfearence-localisation</depend>
</package>
