<?xml version="1.0"?>
<package format="2">
  <name>interfearence-secret-weapon</name>
  <version>0.0.0</version>
  <description>The interfearence-secret-weapon package</description>

  <maintainer email="nickick@todo.todo">nickick</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
</package>
