<?xml version="1.0"?>
<package format="2">
  <name>interfearence_hardware</name>
  <version>0.0.0</version>
  <description>The interfearence_hardware package</description>

  <maintainer email="nickick@todo.todo">nickick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ODrive</exec_depend>
</package>
