<?xml version="1.0"?>
<package format="2">
  <name>interfearence_controllers_generic_controller</name>
  <version>0.0.0</version>
  <description>The interfearence_controllers_generic_controller package</description>

  <maintainer email="nickick@todo.todo">nickick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
